app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-gazing
  namespace: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cats-gazing
  template:
    metadata:
      labels:
        app: cats-gazing
    spec:
      containers:
      - name: cats-gazing
        image: docker.io/andriifedotov/cats-gazing:a1ee05f97c050b5ba7ef3a867b231f2057f6a4f3
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: db-secret
          mountPath: /etc/secrets/db
          readOnly: true
      volumes:
      - name: db-secret
        secret:
          secretName: cats-gazing-db-secret
