app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-gazing
  namespace: application
spec:
  selector:
    app: cats-gazing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
